refactor: apply new MealPlan structure