@@ -69,6 +69,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+          <version>1.18.34</version> 
             <optional>true</optional>
         </dependency>
 
@@ -174,11 +175,16 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
+                    <compilerArgs>
+                    <arg>--add-opens</arg>
+                    <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>${lombok.version}</version>
+                            <!-- <version>${lombok.version}</version> -->
+                             <version>1.18.34</version> 
                         </path>
                         <path>
                             <groupId>org.mapstruct</groupId>
